force-app/main/default/objects/ReferenceData__mdt/ReferenceData__mdt.object-meta.xml
<CustomObject>
    <description>Generic Reference Data table used for:
1. Reference Tables used in Prescreening Eligibility Rules</description>
    <label>Reference Data</label>
    <pluralLabel>Reference Data</pluralLabel>
</CustomObject>