force-app/main/default/objects/ReferenceData__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Contains Key of generic reference data</description>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>