force-app/main/default/objects/ReferenceData__mdt/fields/Number_Of_People__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_People__c</fullName>
    <description>Number of people current record is associated to. Used in KTAP, SNAP and CCAP resource based limits.</description>
    <label>Number Of People</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>