force-app/main/default/objects/ReferenceData__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Stores the type of reference metadata</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>